--- a/mybib.bib
+++ b/mybib.bib
@@ -1,3 +1,31 @@
+@article{Whittle1988,
+abstract = {{\textless}p{\textgreater} We consider a population of {\textless}italic{\textgreater}n{\textless}/italic{\textgreater} projects which in general continue to evolve whether in operation or not (although by different rules). It is desired to choose the projects in operation at each instant of time so as to maximise the expected rate of reward, under a constraint upon the expected number of projects in operation. The Lagrange multiplier associated with this constraint defines an index which reduces to the Gittins index when projects not being operated are static. If one is constrained to operate {\textless}italic{\textgreater}m{\textless}/italic{\textgreater} projects exactly then arguments are advanced to support the conjecture that, for {\textless}italic{\textgreater}m{\textless}/italic{\textgreater} and {\textless}italic{\textgreater}n{\textless}/italic{\textgreater} large in constant ratio, the policy of operating the {\textless}italic{\textgreater}m{\textless}/italic{\textgreater} projects of largest current index is nearly optimal. The index is evaluated for some particular projects. {\textless}/p{\textgreater}},
+author = {Whittle, P.},
+doi = {10.2307/3214163},
+file = {:local/pmxtol/Dropbox/PhD/Papers/Patrolling Games/New papers/Restless Bandits$\backslash$: Activity Allocation in a Changing World.pdf:pdf},
+isbn = {00219002},
+issn = {0021-9002},
+journal = {Journal of Applied Probability},
+number = {A},
+pages = {287--298},
+title = {{Restless bandits: activity allocation in a changing world}},
+url = {https://www.cambridge.org/core/product/identifier/S0021900200040420/type/journal{\_}article},
+volume = {25},
+year = {1988}
+}
+@article{Alpern1998,
+abstract = {E. J. Anderson and R. R. Weber, J. Appl. Probab., 28 (1990), pp. 839–851, considered the problem of two rendezvousers, R1,R2, randomly placed among n indistinguishable locations, who seek to meet in least expected time, using the same mixed strategy. We retain their dynamics but modify the rendezvousers' aim to meeting each other before either encounters an enemy searcher S. We solve this zero-sum game in minimal space (3 locations) and time (2 steps after placement), and find that optimal play requires that the rendezvous team use a mixture over behavioral strategies. While such complicated strategies are known to be necessary in principal for team games (the theory of Isbell and Alpern), we believe this is the first naturally occuring game where such a solution is derived. (An earlier paper by Lim solved a similar game in which R1 and R2 were allowed to use different strategies and joint randomization.)},
+author = {Alpern, Steve and Shi, Lim Wei},
+doi = {https https://doi.org/10.1137/S0363012996309770},
+file = {:local/pmxtol/Dropbox/PhD/Papers/Patrolling Games/New papers/The Symmetric Rendezvous-Evasion Game.pdf:pdf},
+journal = {SIAM Journal on Control and Optimization},
+keywords = {rendezvous search,zero-sum game},
+number = {3},
+pages = {948--959},
+title = {{The Symmetric Rendezvous-Evasion Game}},
+volume = {36},
+year = {1998}
+}
 @article{Alpern1999,
 abstract = {Two agents are placed randomly on nodes of a known graph. They are aware of their own position, up to certain symmetries of the graph, but not that of the other agent. At each step, each agent may stay where he is or move to an adjacent node. Their common aim is to minimize the expected number of steps required to meet (occupy the same node). We consider two cases determined by whether or not the players are constrained to use identical strategies. This work extends that of Anderson and Weber on ‘discrete locations' (complete graph) and is related to continuous (time and space) rendezvous as formulated by Alpern. Probabilistic notions arise in the random initial placement, in the random symmetries determining spatial uncertainty of agents, and through the use of mixed strategies.},
 author = {Alpern, Steve and Baston, V. J. and Essegaier, Skander},
@@ -13,19 +41,6 @@ title = {{Rendezvous search on a graph}},
 url = {https://www.cambridge.org/core/product/identifier/S0021900200016983/type/journal{\_}article},
 volume = {36},
 year = {1999}
-}
-@article{Alpern1998,
-abstract = {E. J. Anderson and R. R. Weber, J. Appl. Probab., 28 (1990), pp. 839–851, considered the problem of two rendezvousers, R1,R2, randomly placed among n indistinguishable locations, who seek to meet in least expected time, using the same mixed strategy. We retain their dynamics but modify the rendezvousers' aim to meeting each other before either encounters an enemy searcher S. We solve this zero-sum game in minimal space (3 locations) and time (2 steps after placement), and find that optimal play requires that the rendezvous team use a mixture over behavioral strategies. While such complicated strategies are known to be necessary in principal for team games (the theory of Isbell and Alpern), we believe this is the first naturally occuring game where such a solution is derived. (An earlier paper by Lim solved a similar game in which R1 and R2 were allowed to use different strategies and joint randomization.)},
-author = {Alpern, Steve and Shi, Lim Wei},
-doi = {https https://doi.org/10.1137/S0363012996309770},
-file = {:local/pmxtol/Dropbox/PhD/Papers/Patrolling Games/New papers/The Symmetric Rendezvous-Evasion Game.pdf:pdf},
-journal = {SIAM Journal on Control and Optimization},
-keywords = {rendezvous search,zero-sum game},
-number = {3},
-pages = {948--959},
-title = {{The Symmetric Rendezvous-Evasion Game}},
-volume = {36},
-year = {1998}
 }
 @article{Abdel-Rahman2014,
 abstract = {Establishing communications in a dynamic spectrum access (DSA) network requires the communicating parties to “rendezvous” before transmitting their data packets. Frequency hopping (FH) is an effective rendezvous method that does not rely on a predetermined control channel. Recently, “quorum-based” FH approaches have been proposed for asynchronous rendezvous in DSA networks. These approaches are highly vulnerable to jamming, especially when the attacker is an insider node (i.e., a compromised node). In this paper, we investigate the problem of two secondary users (SUs), a transmitter and a receiver, try to rendezvous in the presence of a third SU acting as a jammer. The jammer is aware of the underlying (quorum-based) rendezvous design. First, we consider the case when all SUs are time-synchronized and are aware of the “rendezvous channel.” We formulate the problem as a three-player game between the transmitter, receiver, and jammer. The transmitter and receiver try to maximize the number of successful rendezvous slots, while minimizing the number of jammed rendezvous slots. The jammer has the opposite objective. We show that this game does not have a pure Nash equilibrium (NE). Accordingly, we formulate a simplified two-player game between the receiver and jammer (assuming a uniform strategy by the transmitter), and derive multiple pure NE strategies. Next, we study the case when the rendezvous channel is unknown and obtain the Bayesian NE. Finally, the asynchronous case is addressed by exploiting the “rotation closure property” of quorum systems. Our numerical experiments show that uncertainty about the transmitter's strategy improves the anti-jamming rendezvous performance. They also show that the rendezvous performance improves if the receiver and jammer are time-synchronized, and also improves if the receiver and jammer have a common guess about the transmitter's strategy.},
