Final to submit

--- a/mybib.bib
+++ b/mybib.bib
@@ -1,3 +1,25 @@
+@book{Gittins2011,
+abstract = {2nd ed. In 1989 the first edition of this book set out Gittins' pioneering index solution to the multi-armed bandit problem and his subsequent investigation of a wide of sequential resource allocation and stochastic scheduling problems. Since then there has been a remarkable flowering of new insights, generalizations and applications, to which Glazebrook and Weber have made major contributions. This second edition brings the story up to date. There are new chapters on the achievable region approach to stochastic optimization problems, the construction of performance bounds for suboptimal policies, Whit. Front Matter -- Introduction or Exploration -- Main Ideas: Gittins Index -- Necessary Assumptions for Indices -- Superprocesses, Precedence Constraints and Arrivals -- The Achievable Region Methodology -- Restless Bandits and Lagrangian Relaxation -- Multi-Population Random Sampling (Theory) -- Multi-Population Random Sampling (Calculations) -- Further Exploitation -- References -- Tables -- Index.},
+author = {Gittins, John and Glazebrook, Kevin and Weber, Richard},
+isbn = {9780470670026},
+pages = {577},
+publisher = {John Wiley {\&} Sons},
+title = {{Multi-armed Bandit Allocation Indices}},
+year = {2011}
+}
+@article{Alpern1985,
+author = {Alpern, Steve and Asic, Miroslav},
+doi = {10.1002/net.3230150208},
+file = {:local/pmxtol/Dropbox/PhD/Papers/Patrolling Games/New papers/The Search Value of a Network.pdf:pdf},
+issn = {00283045},
+journal = {Networks},
+number = {2},
+pages = {229--238},
+title = {{The search value of a network}},
+url = {http://doi.wiley.com/10.1002/net.3230150208},
+volume = {15},
+year = {1985}
+}
 @article{Whittle1988,
 abstract = {{\textless}p{\textgreater} We consider a population of {\textless}italic{\textgreater}n{\textless}/italic{\textgreater} projects which in general continue to evolve whether in operation or not (although by different rules). It is desired to choose the projects in operation at each instant of time so as to maximise the expected rate of reward, under a constraint upon the expected number of projects in operation. The Lagrange multiplier associated with this constraint defines an index which reduces to the Gittins index when projects not being operated are static. If one is constrained to operate {\textless}italic{\textgreater}m{\textless}/italic{\textgreater} projects exactly then arguments are advanced to support the conjecture that, for {\textless}italic{\textgreater}m{\textless}/italic{\textgreater} and {\textless}italic{\textgreater}n{\textless}/italic{\textgreater} large in constant ratio, the policy of operating the {\textless}italic{\textgreater}m{\textless}/italic{\textgreater} projects of largest current index is nearly optimal. The index is evaluated for some particular projects. {\textless}/p{\textgreater}},
 author = {Whittle, P.},
@@ -508,6 +530,7 @@ year = {1972}
 abstract = {This paper develops models that maximize the expected number of occasions per unit of time that a police patrol unit enters a street segment during the time that a crime is visible. Constraints are added that insure a minimum patrol coverage to all streets. The successive visits from street-to-street form a Markov chain. The solution that maximizes the objective function gives a stochastic decision rule which is used with Monte Carlo techniques to generate a random patrol schedule. The problem is posed with one car and several cars patrolling the same region.},
 author = {Olson, D. G. and Wright, G. P.},
 doi = {10.1057/jors.1975.150},
+file = {:local/pmxtol/Dropbox/PhD/Papers/Patrolling Games/New papers/Models for Allocating Police Preventive Patrol Effort.pdf:pdf},
 issn = {0160-5682},
 journal = {Operational Research Quarterly},
 month = {dec},
